crates/pyfmt_python_formatter/src/comments/snapshots/pyfmt_python_formatter__comments__tests__parenthesized_trailing_comment.snap
---
source: crates/pyfmt_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: ExprName,
        range: 6..7,
        source: `a`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# comment",
                position: OwnLine,
                formatted: false,
            },
        ],
    },
}
