crates/pyfmt_python_formatter/src/comments/snapshots/pyfmt_python_formatter__comments__tests__positional_argument_only_leading_comma_comment.snap
---
source: crates/pyfmt_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: Parameters,
        range: 9..170,
        source: `(⏎`,
    }: {
        "leading": [],
        "dangling": [
            SourceComment {
                text: "# Positional arguments only after here",
                position: OwnLine,
                formatted: false,
            },
            SourceComment {
                text: "# trailing positional argument comment.",
                position: EndOfLine,
                formatted: false,
            },
        ],
        "trailing": [],
    },
    Node {
        kind: ParameterWithDefault,
        range: 15..16,
        source: `a`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# trailing positional comment",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
    Node {
        kind: ParameterWithDefault,
        range: 166..167,
        source: `b`,
    }: {
        "leading": [
            SourceComment {
                text: "# leading b comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
}
