crates/pyfmt_python_formatter/src/comments/snapshots/pyfmt_python_formatter__comments__tests__trailing_after_comma.snap
---
source: crates/pyfmt_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: ParameterWithDefault,
        range: 15..16,
        source: `a`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# Trailing comment for argument `a`",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
}
