crates/pyfmt_python_formatter/src/comments/snapshots/pyfmt_python_formatter__comments__tests__trailing_comment_after_single_statement_body.snap
---
source: crates/pyfmt_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: StmtPass,
        range: 12..16,
        source: `pass`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# Test",
                position: OwnLine,
                formatted: false,
            },
        ],
    },
}
