crates/pyfmt_python_formatter/src/comments/snapshots/pyfmt_python_formatter__comments__tests__trailing_most_outer_nested.snap
---
source: crates/pyfmt_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: StmtExpr,
        range: 1..33,
        source: `x + (⏎`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# outer",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
    Node {
        kind: ExprNumberLiteral,
        range: 11..12,
        source: `3`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# trailing comment",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
}
